--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace 'com.android.domain'
-
+    compileSdk 34
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 34
