--- a/data/build.gradle
+++ b/data/build.gradle
@@ -31,20 +31,20 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
     api 'com.squareup.okhttp3:logging-interceptor:4.9.3'
-    api 'com.squareup.okhttp3:okhttp:4.9.3'
-    api 'com.google.code.gson:gson:2.9.1'
+    api 'com.squareup.okhttp3:okhttp:4.12.0'
+    api 'com.google.code.gson:gson:2.10.1'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
     implementation 'androidx.room:room-runtime:2.6.0'
     implementation 'androidx.room:room-rxjava2:2.6.0'
     kapt 'androidx.room:room-compiler:2.6.0'
 
-    implementation "com.google.dagger:hilt-android:2.48"
-    kapt "com.google.dagger:hilt-android-compiler:2.48"
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'io.mockk:mockk:1.12.0'
+    testImplementation 'io.mockk:mockk:1.13.8'
 }
