--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -28,11 +28,11 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
 
-    implementation "com.google.dagger:hilt-android:2.48"
-    kapt "com.google.dagger:hilt-android-compiler:2.48"
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
     testImplementation 'junit:junit:4.13.2'
