--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -31,16 +31,16 @@ android {
 dependencies {
     implementation project(':domain')
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation "androidx.fragment:fragment-ktx:1.6.0"
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
 
-    implementation "io.coil-kt:coil:0.7.0"
+    implementation 'io.coil-kt:coil:2.5.0'
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
     testImplementation 'junit:junit:4.13.2'
