--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,15 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    compileSdkVersion 33
-
     defaultConfig {
         applicationId "com.android.artgallery"
+        compileSdk 34
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,6 +39,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.android.artgallery'
+    hilt {
+        enableAggregatingTask = true
+    }
 }
 
 dependencies {
@@ -48,10 +51,10 @@ dependencies {
     implementation project(':presentation')
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
 
     testImplementation 'junit:junit:4.13.2'
 }
