--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
     hilt {
         enableAggregatingTask = true
     }
+    dynamicFeatures = []
 }
 
 dependencies {
@@ -53,8 +54,8 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.12.0'
 
-    implementation 'com.google.dagger:hilt-android:2.48.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
+    implementation 'com.google.dagger:hilt-android:2.50'
+    kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
     testImplementation 'junit:junit:4.13.2'
 }
