--- a/data/build.gradle
+++ b/data/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
-    api 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    api 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     api 'com.squareup.okhttp3:okhttp:4.12.0'
     api 'com.google.code.gson:gson:2.10.1'
 
@@ -42,10 +42,11 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-rxjava2:2.6.1'
+    implementation 'androidx.room:room-common:2.6.1'
     kapt 'androidx.room:room-compiler:2.6.1'
 
-    implementation 'com.google.dagger:hilt-android:2.48.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
+    implementation 'com.google.dagger:hilt-android:2.50'
+    kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'io.mockk:mockk:1.13.8'
