--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -27,15 +27,15 @@ android {
 }
 
 dependencies {
-    api(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    api(platform('org.jetbrains.kotlin:kotlin-bom:1.9.22'))
     api 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
 
-    implementation 'com.google.dagger:hilt-android:2.48.1'
-    kapt 'com.google.dagger:hilt-android-compiler:2.48.1'
+    implementation 'com.google.dagger:hilt-android:2.50'
+    kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
     testImplementation 'junit:junit:4.13.2'
 }
