--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'io.coil-kt:coil:2.5.0'
 
     implementation 'com.google.dagger:hilt-android:2.50'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
     testImplementation 'junit:junit:4.13.2'
