--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -16,6 +16,11 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.4"
     }
 
     compileOptions {
