--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -38,6 +38,8 @@ android {
 
 dependencies {
     implementation project(':domain')
+    def composeBom = platform('androidx.compose:compose-bom:2023.10.01')
+    implementation composeBom
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'com.google.android.material:material:1.11.0'
@@ -53,7 +55,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
-    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation  'junit:junit:4.13.2'
+    androidTestImplementation composeBom
+
 }
 kapt {
     correctErrorTypes = true
