--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.10.01')
     implementation composeBom
 
+    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
