--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 
     androidTestImplementation  'junit:junit:4.13.2'
     androidTestImplementation composeBom
+    debugImplementation 'androidx.compose.ui:ui-tooling'
 
 }
 kapt {
