--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -44,6 +44,14 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-window-size-class'
+    // Optional - Integration with activities
+    implementation 'androidx.activity:activity-compose:1.8.2'
+    // Optional - Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
+    // Optional - Integration with LiveData
+    implementation 'androidx.compose.runtime:runtime-livedata'
+    // Optional - Integration with RxJava
+    implementation 'androidx.compose.runtime:runtime-rxjava2'
 
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'com.google.android.material:material:1.11.0'
@@ -55,8 +63,8 @@ dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.50'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.50'
 
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
