--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,6 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext.kotlin_version = '1.9.20'
-    repositories {
-        google()
-        mavenCentral()
-        maven {
-            url "https://maven.google.com"
-        }
-        maven { url 'https://jitpack.io' }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.48.1'
-    }
-}
+plugins {
+    id "com.android.application" version "8.2.2" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.20" apply false
+    id 'com.google.dagger.hilt.android' version '2.50' apply false
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven {
-            url "https://maven.google.com"
-        }
-        maven { url 'https://jitpack.io' }
-    }
-}
-
-
-tasks.register('clean', Delete) {
-    delete rootProject.buildDir
 }
