--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.dagger.hilt.android'
+    id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
 }
 
@@ -12,6 +12,9 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 34
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildFeatures {
@@ -34,10 +37,20 @@ android {
     hilt {
         enableAggregatingTask = true
     }
+    packaging {
+        resources {
+            it.excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
     implementation project(':domain')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
     def composeBom = platform('androidx.compose:compose-bom:2023.10.01')
     implementation composeBom
 
@@ -53,13 +66,16 @@ dependencies {
     // Optional - Integration with RxJava
     implementation 'androidx.compose.runtime:runtime-rxjava2'
 
+    implementation "androidx.navigation:navigation-compose:2.7.7"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
+
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation "androidx.fragment:fragment-ktx:1.6.2"
 
-    implementation 'io.coil-kt:coil:2.5.0'
+    implementation 'io.coil-kt:coil-compose:2.5.0'
 
     implementation 'com.google.dagger:hilt-android:2.50'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
