--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,1 +1,9 @@
-<manifest package="com.android.presentation"/>
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.android.presentation" >
+
+    <application>
+
+    </application>
+
+</manifest>
